Part3_Enquanto/sintatico.output
Grammar

    0 $accept: programa $end

    1 $@1: %empty

    2 programa: cabecalho $@1 variaveis T_INICIO lista_comandos T_FIM

    3 cabecalho: T_PROGRAMA T_IDENTIF

    4 variaveis: %empty
    5          | declaracao_variaveis

    6 $@2: %empty

    7 declaracao_variaveis: declaracao_variaveis tipo $@2 lista_variaveis

    8 $@3: %empty

    9 declaracao_variaveis: tipo $@3 lista_variaveis

   10 tipo: T_LOGICO
   11     | T_INTEIRO

   12 lista_variaveis: lista_variaveis T_IDENTIF
   13                | T_IDENTIF

   14 lista_comandos: %empty
   15               | comando lista_comandos

   16 comando: entrada_saida
   17        | repeticao
   18        | selecao
   19        | atribuicao
   20        | para

   21 entrada_saida: leitura
   22              | escrita

   23 leitura: T_LEIA T_IDENTIF

   24 escrita: T_ESCREVA expressao

   25 $@4: %empty

   26 repeticao: T_ENQTO expressao T_FACA $@4 lista_comandos T_FIMENQTO

   27 $@5: %empty

   28 $@6: %empty

   29 selecao: T_SE expressao T_ENTAO $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE

   30 $@7: %empty

   31 $@8: %empty

   32 $@9: %empty

   33 $@10: %empty

   34 para: T_PARA termo $@7 T_DE termo $@8 T_ATE termo $@9 T_PASSO termo T_FACA $@10 lista_comandos T_FIMPARA

   35 $@11: %empty

   36 atribuicao: T_IDENTIF $@11 T_ATRIB expressao

   37 expressao: expressao T_VEZES expressao
   38          | expressao T_DIV expressao
   39          | expressao T_MAIS expressao
   40          | expressao T_MENOS expressao
   41          | expressao T_MAIOR expressao
   42          | expressao T_MENOR expressao
   43          | expressao T_IGUAL expressao
   44          | expressao T_E expressao
   45          | expressao T_OU expressao
   46          | termo

   47 termo: T_IDENTIF
   48      | T_NUMERO
   49      | T_V
   50      | T_F
   51      | T_NAO termo

   52 $@12: %empty

   53 termo: T_ABRE $@12 expressao T_FECHA


Terminals, with rules where they appear

$end (0) 0
error (256)
T_PROGRAMA (258) 3
T_INICIO (259) 2
T_FIM (260) 2
T_IDENTIF (261) 3 12 13 23 36 47
T_LEIA (262) 23
T_ESCREVA (263) 24
T_ENQTO (264) 26
T_FACA (265) 26 34
T_FIMENQTO (266) 26
T_PARA (267) 34
T_DE (268) 34
T_ATE (269) 34
T_PASSO (270) 34
T_FIMPARA (271) 34
T_SE (272) 29
T_ENTAO (273) 29
T_SENAO (274) 29
T_FIMSE (275) 29
T_ATRIB (276) 36
T_VEZES (277) 37
T_DIV (278) 38
T_MAIS (279) 39
T_MENOS (280) 40
T_MAIOR (281) 41
T_MENOR (282) 42
T_IGUAL (283) 43
T_E (284) 44
T_OU (285) 45
T_V (286) 49
T_F (287) 50
T_NUMERO (288) 48
T_NAO (289) 51
T_ABRE (290) 53
T_FECHA (291) 53
T_LOGICO (292) 10
T_INTEIRO (293) 11


Nonterminals, with rules where they appear

$accept (39)
    on left: 0
programa (40)
    on left: 2, on right: 0
$@1 (41)
    on left: 1, on right: 2
cabecalho (42)
    on left: 3, on right: 2
variaveis (43)
    on left: 4 5, on right: 2
declaracao_variaveis (44)
    on left: 7 9, on right: 5 7
$@2 (45)
    on left: 6, on right: 7
$@3 (46)
    on left: 8, on right: 9
tipo (47)
    on left: 10 11, on right: 7 9
lista_variaveis (48)
    on left: 12 13, on right: 7 9 12
lista_comandos (49)
    on left: 14 15, on right: 2 15 26 29 34
comando (50)
    on left: 16 17 18 19 20, on right: 15
entrada_saida (51)
    on left: 21 22, on right: 16
leitura (52)
    on left: 23, on right: 21
escrita (53)
    on left: 24, on right: 22
repeticao (54)
    on left: 26, on right: 17
$@4 (55)
    on left: 25, on right: 26
selecao (56)
    on left: 29, on right: 18
$@5 (57)
    on left: 27, on right: 29
$@6 (58)
    on left: 28, on right: 29
para (59)
    on left: 34, on right: 20
$@7 (60)
    on left: 30, on right: 34
$@8 (61)
    on left: 31, on right: 34
$@9 (62)
    on left: 32, on right: 34
$@10 (63)
    on left: 33, on right: 34
atribuicao (64)
    on left: 36, on right: 19
$@11 (65)
    on left: 35, on right: 36
expressao (66)
    on left: 37 38 39 40 41 42 43 44 45 46, on right: 24 26 29 36 37
    38 39 40 41 42 43 44 45 53
termo (67)
    on left: 47 48 49 50 51 53, on right: 34 46 51
$@12 (68)
    on left: 52, on right: 53


State 0

    0 $accept: . programa $end

    T_PROGRAMA  shift, and go to state 1

    programa   go to state 2
    cabecalho  go to state 3


State 1

    3 cabecalho: T_PROGRAMA . T_IDENTIF

    T_IDENTIF  shift, and go to state 4


State 2

    0 $accept: programa . $end

    $end  shift, and go to state 5


State 3

    2 programa: cabecalho . $@1 variaveis T_INICIO lista_comandos T_FIM

    $default  reduce using rule 1 ($@1)

    $@1  go to state 6


State 4

    3 cabecalho: T_PROGRAMA T_IDENTIF .

    $default  reduce using rule 3 (cabecalho)


State 5

    0 $accept: programa $end .

    $default  accept


State 6

    2 programa: cabecalho $@1 . variaveis T_INICIO lista_comandos T_FIM

    T_LOGICO   shift, and go to state 7
    T_INTEIRO  shift, and go to state 8

    $default  reduce using rule 4 (variaveis)

    variaveis             go to state 9
    declaracao_variaveis  go to state 10
    tipo                  go to state 11


State 7

   10 tipo: T_LOGICO .

    $default  reduce using rule 10 (tipo)


State 8

   11 tipo: T_INTEIRO .

    $default  reduce using rule 11 (tipo)


State 9

    2 programa: cabecalho $@1 variaveis . T_INICIO lista_comandos T_FIM

    T_INICIO  shift, and go to state 12


State 10

    5 variaveis: declaracao_variaveis .
    7 declaracao_variaveis: declaracao_variaveis . tipo $@2 lista_variaveis

    T_LOGICO   shift, and go to state 7
    T_INTEIRO  shift, and go to state 8

    $default  reduce using rule 5 (variaveis)

    tipo  go to state 13


State 11

    9 declaracao_variaveis: tipo . $@3 lista_variaveis

    $default  reduce using rule 8 ($@3)

    $@3  go to state 14


State 12

    2 programa: cabecalho $@1 variaveis T_INICIO . lista_comandos T_FIM

    T_IDENTIF  shift, and go to state 15
    T_LEIA     shift, and go to state 16
    T_ESCREVA  shift, and go to state 17
    T_ENQTO    shift, and go to state 18
    T_PARA     shift, and go to state 19
    T_SE       shift, and go to state 20

    $default  reduce using rule 14 (lista_comandos)

    lista_comandos  go to state 21
    comando         go to state 22
    entrada_saida   go to state 23
    leitura         go to state 24
    escrita         go to state 25
    repeticao       go to state 26
    selecao         go to state 27
    para            go to state 28
    atribuicao      go to state 29


State 13

    7 declaracao_variaveis: declaracao_variaveis tipo . $@2 lista_variaveis

    $default  reduce using rule 6 ($@2)

    $@2  go to state 30


State 14

    9 declaracao_variaveis: tipo $@3 . lista_variaveis

    T_IDENTIF  shift, and go to state 31

    lista_variaveis  go to state 32


State 15

   36 atribuicao: T_IDENTIF . $@11 T_ATRIB expressao

    $default  reduce using rule 35 ($@11)

    $@11  go to state 33


State 16

   23 leitura: T_LEIA . T_IDENTIF

    T_IDENTIF  shift, and go to state 34


State 17

   24 escrita: T_ESCREVA . expressao

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    expressao  go to state 41
    termo      go to state 42


State 18

   26 repeticao: T_ENQTO . expressao T_FACA $@4 lista_comandos T_FIMENQTO

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    expressao  go to state 43
    termo      go to state 42


State 19

   34 para: T_PARA . termo $@7 T_DE termo $@8 T_ATE termo $@9 T_PASSO termo T_FACA $@10 lista_comandos T_FIMPARA

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    termo  go to state 44


State 20

   29 selecao: T_SE . expressao T_ENTAO $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    expressao  go to state 45
    termo      go to state 42


State 21

    2 programa: cabecalho $@1 variaveis T_INICIO lista_comandos . T_FIM

    T_FIM  shift, and go to state 46


State 22

   15 lista_comandos: comando . lista_comandos

    T_IDENTIF  shift, and go to state 15
    T_LEIA     shift, and go to state 16
    T_ESCREVA  shift, and go to state 17
    T_ENQTO    shift, and go to state 18
    T_PARA     shift, and go to state 19
    T_SE       shift, and go to state 20

    $default  reduce using rule 14 (lista_comandos)

    lista_comandos  go to state 47
    comando         go to state 22
    entrada_saida   go to state 23
    leitura         go to state 24
    escrita         go to state 25
    repeticao       go to state 26
    selecao         go to state 27
    para            go to state 28
    atribuicao      go to state 29


State 23

   16 comando: entrada_saida .

    $default  reduce using rule 16 (comando)


State 24

   21 entrada_saida: leitura .

    $default  reduce using rule 21 (entrada_saida)


State 25

   22 entrada_saida: escrita .

    $default  reduce using rule 22 (entrada_saida)


State 26

   17 comando: repeticao .

    $default  reduce using rule 17 (comando)


State 27

   18 comando: selecao .

    $default  reduce using rule 18 (comando)


State 28

   20 comando: para .

    $default  reduce using rule 20 (comando)


State 29

   19 comando: atribuicao .

    $default  reduce using rule 19 (comando)


State 30

    7 declaracao_variaveis: declaracao_variaveis tipo $@2 . lista_variaveis

    T_IDENTIF  shift, and go to state 31

    lista_variaveis  go to state 48


State 31

   13 lista_variaveis: T_IDENTIF .

    $default  reduce using rule 13 (lista_variaveis)


State 32

    9 declaracao_variaveis: tipo $@3 lista_variaveis .
   12 lista_variaveis: lista_variaveis . T_IDENTIF

    T_IDENTIF  shift, and go to state 49

    $default  reduce using rule 9 (declaracao_variaveis)


State 33

   36 atribuicao: T_IDENTIF $@11 . T_ATRIB expressao

    T_ATRIB  shift, and go to state 50


State 34

   23 leitura: T_LEIA T_IDENTIF .

    $default  reduce using rule 23 (leitura)


State 35

   47 termo: T_IDENTIF .

    $default  reduce using rule 47 (termo)


State 36

   49 termo: T_V .

    $default  reduce using rule 49 (termo)


State 37

   50 termo: T_F .

    $default  reduce using rule 50 (termo)


State 38

   48 termo: T_NUMERO .

    $default  reduce using rule 48 (termo)


State 39

   51 termo: T_NAO . termo

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    termo  go to state 51


State 40

   53 termo: T_ABRE . $@12 expressao T_FECHA

    $default  reduce using rule 52 ($@12)

    $@12  go to state 52


State 41

   24 escrita: T_ESCREVA expressao .
   37 expressao: expressao . T_VEZES expressao
   38          | expressao . T_DIV expressao
   39          | expressao . T_MAIS expressao
   40          | expressao . T_MENOS expressao
   41          | expressao . T_MAIOR expressao
   42          | expressao . T_MENOR expressao
   43          | expressao . T_IGUAL expressao
   44          | expressao . T_E expressao
   45          | expressao . T_OU expressao

    T_VEZES  shift, and go to state 53
    T_DIV    shift, and go to state 54
    T_MAIS   shift, and go to state 55
    T_MENOS  shift, and go to state 56
    T_MAIOR  shift, and go to state 57
    T_MENOR  shift, and go to state 58
    T_IGUAL  shift, and go to state 59
    T_E      shift, and go to state 60
    T_OU     shift, and go to state 61

    $default  reduce using rule 24 (escrita)


State 42

   46 expressao: termo .

    $default  reduce using rule 46 (expressao)


State 43

   26 repeticao: T_ENQTO expressao . T_FACA $@4 lista_comandos T_FIMENQTO
   37 expressao: expressao . T_VEZES expressao
   38          | expressao . T_DIV expressao
   39          | expressao . T_MAIS expressao
   40          | expressao . T_MENOS expressao
   41          | expressao . T_MAIOR expressao
   42          | expressao . T_MENOR expressao
   43          | expressao . T_IGUAL expressao
   44          | expressao . T_E expressao
   45          | expressao . T_OU expressao

    T_FACA   shift, and go to state 62
    T_VEZES  shift, and go to state 53
    T_DIV    shift, and go to state 54
    T_MAIS   shift, and go to state 55
    T_MENOS  shift, and go to state 56
    T_MAIOR  shift, and go to state 57
    T_MENOR  shift, and go to state 58
    T_IGUAL  shift, and go to state 59
    T_E      shift, and go to state 60
    T_OU     shift, and go to state 61


State 44

   34 para: T_PARA termo . $@7 T_DE termo $@8 T_ATE termo $@9 T_PASSO termo T_FACA $@10 lista_comandos T_FIMPARA

    $default  reduce using rule 30 ($@7)

    $@7  go to state 63


State 45

   29 selecao: T_SE expressao . T_ENTAO $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE
   37 expressao: expressao . T_VEZES expressao
   38          | expressao . T_DIV expressao
   39          | expressao . T_MAIS expressao
   40          | expressao . T_MENOS expressao
   41          | expressao . T_MAIOR expressao
   42          | expressao . T_MENOR expressao
   43          | expressao . T_IGUAL expressao
   44          | expressao . T_E expressao
   45          | expressao . T_OU expressao

    T_ENTAO  shift, and go to state 64
    T_VEZES  shift, and go to state 53
    T_DIV    shift, and go to state 54
    T_MAIS   shift, and go to state 55
    T_MENOS  shift, and go to state 56
    T_MAIOR  shift, and go to state 57
    T_MENOR  shift, and go to state 58
    T_IGUAL  shift, and go to state 59
    T_E      shift, and go to state 60
    T_OU     shift, and go to state 61


State 46

    2 programa: cabecalho $@1 variaveis T_INICIO lista_comandos T_FIM .

    $default  reduce using rule 2 (programa)


State 47

   15 lista_comandos: comando lista_comandos .

    $default  reduce using rule 15 (lista_comandos)


State 48

    7 declaracao_variaveis: declaracao_variaveis tipo $@2 lista_variaveis .
   12 lista_variaveis: lista_variaveis . T_IDENTIF

    T_IDENTIF  shift, and go to state 49

    $default  reduce using rule 7 (declaracao_variaveis)


State 49

   12 lista_variaveis: lista_variaveis T_IDENTIF .

    $default  reduce using rule 12 (lista_variaveis)


State 50

   36 atribuicao: T_IDENTIF $@11 T_ATRIB . expressao

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    expressao  go to state 65
    termo      go to state 42


State 51

   51 termo: T_NAO termo .

    $default  reduce using rule 51 (termo)


State 52

   53 termo: T_ABRE $@12 . expressao T_FECHA

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    expressao  go to state 66
    termo      go to state 42


State 53

   37 expressao: expressao T_VEZES . expressao

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    expressao  go to state 67
    termo      go to state 42


State 54

   38 expressao: expressao T_DIV . expressao

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    expressao  go to state 68
    termo      go to state 42


State 55

   39 expressao: expressao T_MAIS . expressao

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    expressao  go to state 69
    termo      go to state 42


State 56

   40 expressao: expressao T_MENOS . expressao

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    expressao  go to state 70
    termo      go to state 42


State 57

   41 expressao: expressao T_MAIOR . expressao

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    expressao  go to state 71
    termo      go to state 42


State 58

   42 expressao: expressao T_MENOR . expressao

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    expressao  go to state 72
    termo      go to state 42


State 59

   43 expressao: expressao T_IGUAL . expressao

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    expressao  go to state 73
    termo      go to state 42


State 60

   44 expressao: expressao T_E . expressao

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    expressao  go to state 74
    termo      go to state 42


State 61

   45 expressao: expressao T_OU . expressao

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    expressao  go to state 75
    termo      go to state 42


State 62

   26 repeticao: T_ENQTO expressao T_FACA . $@4 lista_comandos T_FIMENQTO

    $default  reduce using rule 25 ($@4)

    $@4  go to state 76


State 63

   34 para: T_PARA termo $@7 . T_DE termo $@8 T_ATE termo $@9 T_PASSO termo T_FACA $@10 lista_comandos T_FIMPARA

    T_DE  shift, and go to state 77


State 64

   29 selecao: T_SE expressao T_ENTAO . $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE

    $default  reduce using rule 27 ($@5)

    $@5  go to state 78


State 65

   36 atribuicao: T_IDENTIF $@11 T_ATRIB expressao .
   37 expressao: expressao . T_VEZES expressao
   38          | expressao . T_DIV expressao
   39          | expressao . T_MAIS expressao
   40          | expressao . T_MENOS expressao
   41          | expressao . T_MAIOR expressao
   42          | expressao . T_MENOR expressao
   43          | expressao . T_IGUAL expressao
   44          | expressao . T_E expressao
   45          | expressao . T_OU expressao

    T_VEZES  shift, and go to state 53
    T_DIV    shift, and go to state 54
    T_MAIS   shift, and go to state 55
    T_MENOS  shift, and go to state 56
    T_MAIOR  shift, and go to state 57
    T_MENOR  shift, and go to state 58
    T_IGUAL  shift, and go to state 59
    T_E      shift, and go to state 60
    T_OU     shift, and go to state 61

    $default  reduce using rule 36 (atribuicao)


State 66

   37 expressao: expressao . T_VEZES expressao
   38          | expressao . T_DIV expressao
   39          | expressao . T_MAIS expressao
   40          | expressao . T_MENOS expressao
   41          | expressao . T_MAIOR expressao
   42          | expressao . T_MENOR expressao
   43          | expressao . T_IGUAL expressao
   44          | expressao . T_E expressao
   45          | expressao . T_OU expressao
   53 termo: T_ABRE $@12 expressao . T_FECHA

    T_VEZES  shift, and go to state 53
    T_DIV    shift, and go to state 54
    T_MAIS   shift, and go to state 55
    T_MENOS  shift, and go to state 56
    T_MAIOR  shift, and go to state 57
    T_MENOR  shift, and go to state 58
    T_IGUAL  shift, and go to state 59
    T_E      shift, and go to state 60
    T_OU     shift, and go to state 61
    T_FECHA  shift, and go to state 79


State 67

   37 expressao: expressao . T_VEZES expressao
   37          | expressao T_VEZES expressao .
   38          | expressao . T_DIV expressao
   39          | expressao . T_MAIS expressao
   40          | expressao . T_MENOS expressao
   41          | expressao . T_MAIOR expressao
   42          | expressao . T_MENOR expressao
   43          | expressao . T_IGUAL expressao
   44          | expressao . T_E expressao
   45          | expressao . T_OU expressao

    $default  reduce using rule 37 (expressao)


State 68

   37 expressao: expressao . T_VEZES expressao
   38          | expressao . T_DIV expressao
   38          | expressao T_DIV expressao .
   39          | expressao . T_MAIS expressao
   40          | expressao . T_MENOS expressao
   41          | expressao . T_MAIOR expressao
   42          | expressao . T_MENOR expressao
   43          | expressao . T_IGUAL expressao
   44          | expressao . T_E expressao
   45          | expressao . T_OU expressao

    $default  reduce using rule 38 (expressao)


State 69

   37 expressao: expressao . T_VEZES expressao
   38          | expressao . T_DIV expressao
   39          | expressao . T_MAIS expressao
   39          | expressao T_MAIS expressao .
   40          | expressao . T_MENOS expressao
   41          | expressao . T_MAIOR expressao
   42          | expressao . T_MENOR expressao
   43          | expressao . T_IGUAL expressao
   44          | expressao . T_E expressao
   45          | expressao . T_OU expressao

    T_VEZES  shift, and go to state 53
    T_DIV    shift, and go to state 54

    $default  reduce using rule 39 (expressao)


State 70

   37 expressao: expressao . T_VEZES expressao
   38          | expressao . T_DIV expressao
   39          | expressao . T_MAIS expressao
   40          | expressao . T_MENOS expressao
   40          | expressao T_MENOS expressao .
   41          | expressao . T_MAIOR expressao
   42          | expressao . T_MENOR expressao
   43          | expressao . T_IGUAL expressao
   44          | expressao . T_E expressao
   45          | expressao . T_OU expressao

    T_VEZES  shift, and go to state 53
    T_DIV    shift, and go to state 54

    $default  reduce using rule 40 (expressao)


State 71

   37 expressao: expressao . T_VEZES expressao
   38          | expressao . T_DIV expressao
   39          | expressao . T_MAIS expressao
   40          | expressao . T_MENOS expressao
   41          | expressao . T_MAIOR expressao
   41          | expressao T_MAIOR expressao .
   42          | expressao . T_MENOR expressao
   43          | expressao . T_IGUAL expressao
   44          | expressao . T_E expressao
   45          | expressao . T_OU expressao

    T_VEZES  shift, and go to state 53
    T_DIV    shift, and go to state 54
    T_MAIS   shift, and go to state 55
    T_MENOS  shift, and go to state 56

    $default  reduce using rule 41 (expressao)


State 72

   37 expressao: expressao . T_VEZES expressao
   38          | expressao . T_DIV expressao
   39          | expressao . T_MAIS expressao
   40          | expressao . T_MENOS expressao
   41          | expressao . T_MAIOR expressao
   42          | expressao . T_MENOR expressao
   42          | expressao T_MENOR expressao .
   43          | expressao . T_IGUAL expressao
   44          | expressao . T_E expressao
   45          | expressao . T_OU expressao

    T_VEZES  shift, and go to state 53
    T_DIV    shift, and go to state 54
    T_MAIS   shift, and go to state 55
    T_MENOS  shift, and go to state 56

    $default  reduce using rule 42 (expressao)


State 73

   37 expressao: expressao . T_VEZES expressao
   38          | expressao . T_DIV expressao
   39          | expressao . T_MAIS expressao
   40          | expressao . T_MENOS expressao
   41          | expressao . T_MAIOR expressao
   42          | expressao . T_MENOR expressao
   43          | expressao . T_IGUAL expressao
   43          | expressao T_IGUAL expressao .
   44          | expressao . T_E expressao
   45          | expressao . T_OU expressao

    T_VEZES  shift, and go to state 53
    T_DIV    shift, and go to state 54
    T_MAIS   shift, and go to state 55
    T_MENOS  shift, and go to state 56
    T_MAIOR  shift, and go to state 57
    T_MENOR  shift, and go to state 58

    $default  reduce using rule 43 (expressao)


State 74

   37 expressao: expressao . T_VEZES expressao
   38          | expressao . T_DIV expressao
   39          | expressao . T_MAIS expressao
   40          | expressao . T_MENOS expressao
   41          | expressao . T_MAIOR expressao
   42          | expressao . T_MENOR expressao
   43          | expressao . T_IGUAL expressao
   44          | expressao . T_E expressao
   44          | expressao T_E expressao .
   45          | expressao . T_OU expressao

    T_VEZES  shift, and go to state 53
    T_DIV    shift, and go to state 54
    T_MAIS   shift, and go to state 55
    T_MENOS  shift, and go to state 56
    T_MAIOR  shift, and go to state 57
    T_MENOR  shift, and go to state 58
    T_IGUAL  shift, and go to state 59

    $default  reduce using rule 44 (expressao)


State 75

   37 expressao: expressao . T_VEZES expressao
   38          | expressao . T_DIV expressao
   39          | expressao . T_MAIS expressao
   40          | expressao . T_MENOS expressao
   41          | expressao . T_MAIOR expressao
   42          | expressao . T_MENOR expressao
   43          | expressao . T_IGUAL expressao
   44          | expressao . T_E expressao
   45          | expressao . T_OU expressao
   45          | expressao T_OU expressao .

    T_VEZES  shift, and go to state 53
    T_DIV    shift, and go to state 54
    T_MAIS   shift, and go to state 55
    T_MENOS  shift, and go to state 56
    T_MAIOR  shift, and go to state 57
    T_MENOR  shift, and go to state 58
    T_IGUAL  shift, and go to state 59

    $default  reduce using rule 45 (expressao)


State 76

   26 repeticao: T_ENQTO expressao T_FACA $@4 . lista_comandos T_FIMENQTO

    T_IDENTIF  shift, and go to state 15
    T_LEIA     shift, and go to state 16
    T_ESCREVA  shift, and go to state 17
    T_ENQTO    shift, and go to state 18
    T_PARA     shift, and go to state 19
    T_SE       shift, and go to state 20

    $default  reduce using rule 14 (lista_comandos)

    lista_comandos  go to state 80
    comando         go to state 22
    entrada_saida   go to state 23
    leitura         go to state 24
    escrita         go to state 25
    repeticao       go to state 26
    selecao         go to state 27
    para            go to state 28
    atribuicao      go to state 29


State 77

   34 para: T_PARA termo $@7 T_DE . termo $@8 T_ATE termo $@9 T_PASSO termo T_FACA $@10 lista_comandos T_FIMPARA

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    termo  go to state 81


State 78

   29 selecao: T_SE expressao T_ENTAO $@5 . lista_comandos T_SENAO $@6 lista_comandos T_FIMSE

    T_IDENTIF  shift, and go to state 15
    T_LEIA     shift, and go to state 16
    T_ESCREVA  shift, and go to state 17
    T_ENQTO    shift, and go to state 18
    T_PARA     shift, and go to state 19
    T_SE       shift, and go to state 20

    $default  reduce using rule 14 (lista_comandos)

    lista_comandos  go to state 82
    comando         go to state 22
    entrada_saida   go to state 23
    leitura         go to state 24
    escrita         go to state 25
    repeticao       go to state 26
    selecao         go to state 27
    para            go to state 28
    atribuicao      go to state 29


State 79

   53 termo: T_ABRE $@12 expressao T_FECHA .

    $default  reduce using rule 53 (termo)


State 80

   26 repeticao: T_ENQTO expressao T_FACA $@4 lista_comandos . T_FIMENQTO

    T_FIMENQTO  shift, and go to state 83


State 81

   34 para: T_PARA termo $@7 T_DE termo . $@8 T_ATE termo $@9 T_PASSO termo T_FACA $@10 lista_comandos T_FIMPARA

    $default  reduce using rule 31 ($@8)

    $@8  go to state 84


State 82

   29 selecao: T_SE expressao T_ENTAO $@5 lista_comandos . T_SENAO $@6 lista_comandos T_FIMSE

    T_SENAO  shift, and go to state 85


State 83

   26 repeticao: T_ENQTO expressao T_FACA $@4 lista_comandos T_FIMENQTO .

    $default  reduce using rule 26 (repeticao)


State 84

   34 para: T_PARA termo $@7 T_DE termo $@8 . T_ATE termo $@9 T_PASSO termo T_FACA $@10 lista_comandos T_FIMPARA

    T_ATE  shift, and go to state 86


State 85

   29 selecao: T_SE expressao T_ENTAO $@5 lista_comandos T_SENAO . $@6 lista_comandos T_FIMSE

    $default  reduce using rule 28 ($@6)

    $@6  go to state 87


State 86

   34 para: T_PARA termo $@7 T_DE termo $@8 T_ATE . termo $@9 T_PASSO termo T_FACA $@10 lista_comandos T_FIMPARA

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    termo  go to state 88


State 87

   29 selecao: T_SE expressao T_ENTAO $@5 lista_comandos T_SENAO $@6 . lista_comandos T_FIMSE

    T_IDENTIF  shift, and go to state 15
    T_LEIA     shift, and go to state 16
    T_ESCREVA  shift, and go to state 17
    T_ENQTO    shift, and go to state 18
    T_PARA     shift, and go to state 19
    T_SE       shift, and go to state 20

    $default  reduce using rule 14 (lista_comandos)

    lista_comandos  go to state 89
    comando         go to state 22
    entrada_saida   go to state 23
    leitura         go to state 24
    escrita         go to state 25
    repeticao       go to state 26
    selecao         go to state 27
    para            go to state 28
    atribuicao      go to state 29


State 88

   34 para: T_PARA termo $@7 T_DE termo $@8 T_ATE termo . $@9 T_PASSO termo T_FACA $@10 lista_comandos T_FIMPARA

    $default  reduce using rule 32 ($@9)

    $@9  go to state 90


State 89

   29 selecao: T_SE expressao T_ENTAO $@5 lista_comandos T_SENAO $@6 lista_comandos . T_FIMSE

    T_FIMSE  shift, and go to state 91


State 90

   34 para: T_PARA termo $@7 T_DE termo $@8 T_ATE termo $@9 . T_PASSO termo T_FACA $@10 lista_comandos T_FIMPARA

    T_PASSO  shift, and go to state 92


State 91

   29 selecao: T_SE expressao T_ENTAO $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE .

    $default  reduce using rule 29 (selecao)


State 92

   34 para: T_PARA termo $@7 T_DE termo $@8 T_ATE termo $@9 T_PASSO . termo T_FACA $@10 lista_comandos T_FIMPARA

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    termo  go to state 93


State 93

   34 para: T_PARA termo $@7 T_DE termo $@8 T_ATE termo $@9 T_PASSO termo . T_FACA $@10 lista_comandos T_FIMPARA

    T_FACA  shift, and go to state 94


State 94

   34 para: T_PARA termo $@7 T_DE termo $@8 T_ATE termo $@9 T_PASSO termo T_FACA . $@10 lista_comandos T_FIMPARA

    $default  reduce using rule 33 ($@10)

    $@10  go to state 95


State 95

   34 para: T_PARA termo $@7 T_DE termo $@8 T_ATE termo $@9 T_PASSO termo T_FACA $@10 . lista_comandos T_FIMPARA
